--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "@psf/bch-js": "6.4.5",
     "apidoc": "0.53.0",
     "base58-js": "2.0.0",
-    "nostr-tools": "2.10.1"
+    "nostr-tools": "2.10.1",
+    "ws": "8.18.0"
   },
   "devDependencies": {
     "c8": "7.12.0",
