--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "base58-js": "2.0.0",
     "bch-message-lib": "2.3.1",
     "nostr": "0.2.8",
-    "nostr-tools": "2.10.1",
+    "@chris.troutner/nostr-tools": "2.10.4",
     "ws": "8.18.0"
   },
   "devDependencies": {
